Updated biography for Vile and Cain

--- a/src/character_Sigma_and_Vile.tex
+++ b/src/character_Sigma_and_Vile.tex
@@ -16,13 +16,14 @@ WIP. Information will be added at the proper time.
 Sigma declares his war to humanity on July 4$^{th}$ 21XX, and launches an all-out attack onto Abel city, by deploying his troops to conquer strategical positions and assigning powerful reploids to protect them, but only after having first stroke the city  with a missile attack, as shown in \textit{Day of $\Sigma$}. On this occasion he has a first confrontation with X which Sigma easily defeats. However during the fight for a brief moment X manages to reach his full potential hitting Sigma and leaving his signature scars. After that he retires
 into his fortress, waiting for his scheme to be completed. In truth, Sigma's plans not only aim at human extinction, but he also wants to discover X's true potential by forcing him to fight. To no surprise, in fact, X manages to defeat all his subordinates and, with the help of Zero, to infiltrate his fortress. Here Sigma prepare a last test for X, by resurrecting all defeated reploids and making them fight X once more\footnote{``\textit{Sigma must have brought his body back to life}''-X talking to a resurrected Launch Octopus-\cite{wiki:MM_MHX_script}}. X passes this trial too, even taking down Vile, and finally reaches Sigma which happily verifies that he was right about X and reploids' unlimited potential, and then proceeds to challenge him in a final fight, firmly believing to be superior. Sigma however misjudges X, which strikes him down even after he combines with a giant wolf-type mechaniloid (\ref{boss:wolf_sigma}) to further increase his power. Defeated in the body, but not in the spirit, Sigma's body sinks into the sea alongside his fortress while X, teleported outside, watches silently believing to have put an end to the war. Sadly, this couldn't be far from true, as in reality Sigma's true consciousness had already left his original body before the fight with X, preparing to resurrect again in case of defeat: ``\textit{What you defeated was not my true self. The machine that was destroyed was more like another body. I will materialize and resurrect once more}''~\cite{wordpress:X_japanese_script}.
 
-Sigma returns again six months later, at the end of X2. During his absence the command of his forces were entrusted to the X-Hunters, which had their main goal in resurrecting Sigma again, building for him a new body. This is achieved thanks to Serges, the leader of the X-Hunters and a brilliant scientist. Alongside his resurrection, the three mavericks also work on other two schemes: increasing their army size, by the maverick virus throughout the word from the Central Computer and by building new mavericks, and resurrecting the deceased Zero as a maverick. It is not clear however if these two last objectives were posed by Sigma himself or were perpetrated by the X-Hunters autonomously. What is indeed sure is that at some point during this second revolution, Sigma must have received vital information about Zero's origins, since from this point onward alongside his obsession with X he will also develop an obsession for having Zero side with him. Sigma's plans however do not go as expected, since not only Zero does not side with him (depending on the choices made he will either never side with him or snap out of his control after a fight with X) but X  to defeat him again, even after Sigma managed to manifest his true, viral, form by using the Central Computer energy to manifest. Defeated again Sigma disappears, leaving behind words of warning for X, as he has resurrected once and will do it again until his victory. However in his last words Sigma can not hold for himself the regret for not understanding why Zero did not joined him: ``\textit{But, Zero, why…he’s…the last of…Wi…num…ers…}''~\cite{wordpress:X2_japanese_script}.
-\begin{figure}[h]
+Sigma returns again six months later, at the end of X2. During his absence the command of his forces were entrusted to the X-Hunters, which had their main goal in resurrecting Sigma again, building for him a new body. This is achieved thanks to Serges, the leader of the X-Hunters and a brilliant scientist. Alongside his resurrection, the three mavericks also work on other two schemes: increasing their army size, by the maverick virus throughout the word from the Central Computer and by building new mavericks, and resurrecting the deceased Zero as a maverick. It is not clear however if these two last objectives were posed by Sigma himself or were perpetrated by the X-Hunters autonomously. What is indeed sure is that at some point during this second revolution, Sigma must have received vital information about Zero's origins, since from this point onward alongside his obsession with X he will also develop an obsession for having Zero side with him. Sigma's plans however do not go as expected, since not only Zero does not side with him (depending on the choices made he will either never side with him or snap out of his control after a fight with X) but X  to defeat him again, even after Sigma managed to manifest his true form by using the Central Computer energy to manifest. Defeated again Sigma disappears, leaving behind words of warning for X, as he has resurrected once and will do it again until his victory. However in his last words Sigma can not hold for himself the regret for not understanding why Zero did not joined him: ``\textit{But, Zero, why…he’s…the last of…Wi…num…ers…}''~\cite{wordpress:X2_japanese_script}.
+\begin{figure}[htp]
 	\centering
 	\includegraphics[height=\portraitsize]{figures/X2/Hunter_stages/Sigma_Virus.png}
 	\caption{Sigma in his viral form}
 \end{figure}
 
+Following his defeat by X, Sigma enters a deep slumber~\cite{wayback:X3_resources}, despite his virus kept spreading and turning reploids in mavericks. Such activity however did not pass unnoticed to scientists, who begin searching the cause of the maverick behavior. Among this scientists, it is Dr.~Doppler who manages to give a proper answer, by isolating what he names the Sigma Virus and developing a proper countermeasure. During such work, however, Doppler becomes infected too by the virus, turning him into a loyal serve of Sigma. Now with a brilliant scientist by his side, Sigma seize this opportunity to rise once again, by forcing Doppler to cause a new rebellion using reploid he was supposed to have cured. Moreover, Sigma also forces Doppler to collect data from the most advanced reploid and use them to build him a new powerful body. Despite everything, however, X still manages to halt Doppler's plans and face Sigma, winning against him once more. Having lost again his body to X, Sigma tries one final attempt to defeat his enemy, by entering his viral form and trying to possess X. He almost succeeds in it, cornering X after a chase, but he is ultimately defeated again by Zero/Doppler, who uses an antivirus developed by the scientist to disperse him once more.
 
 
 \chapter{Vile}\label{char:Vile}
@@ -41,7 +42,7 @@ Clearly what said until now regards only the first game of the series, as there 
 \section{Before the war}
 It is unknown when Vile was created or who build him. What is sure, however, is that Vile was designed purely for combat, as Zero points to X during their first meeting with him\footnote{``\textit{X, you shouldn't expect to defeat him, he is designed to be a war machine.}''- Zero}, maybe specifically to work as a Maverick Haunter. Thanks to his equipment, Vile quickly became one of the highest-ranked Maverick Haunter of the 17$^{th}$ elite unit (the same as X, Zero and Sigma), with the Special-A (SA) rank, the same as Zero and Sigma, despite his bad attitude. According to information given, in fact, Vile have always behave with arrogance and superiority, only taking orders from himself\footnote{``\textit{I'll tell you one thing$\dots$ I don't like working for others.}''-Vile~\cite{MHX:Vile_script}}, disrespecting superiors\footnote{``\textit{You don't respect authority. You don't follow orders. I pity you}''-Armored Armadillo~\cite{MHX:Vile_script}} and working alone, not having anyone to consider friends and, on the contrary, disliking some of his comrades\footnote{``\textit{I've always hated you, Storm Eagle. You and that smug face of yours}''-Vile~\cite{MHX:Vile_script}}, especially X. Although this he still has the respect of his commilitones, such as Sting Chameleon (``\textit{It's Vile$\dots$ I used to have nothing but respect for you, you know.}''~\cite{MHX:Vile_script}).
 
-It is with X, however, that Vile shows his worst. To him, in fact, X is only a weak reploid and nothing more, and thus he doesn't understand the reasons why people around him claim X to have incredible power. Because of this Vile develops a grudge and hatred for X, which in reality only covers his jealousy, and dedicates himself to the task of defeating and humiliating him for as much as he can, in order to prove himself and to others that he is the strongest reploids.
+It is with X however that Vile shows his worst. To him, in fact, X is only a weak reploid and nothing more, and thus he doesn't understand the reasons why people around him claim X to have incredible power. Because of this Vile develops a grudge and hatred for X, which in reality only covers his jealousy, and dedicates himself to the task of defeating and humiliating him for as much as he can, in order to prove himself and to others that he is the strongest reploids.
 
 Vile's situation gets worse when a fault in his electronic brain occurs. Due to this fault Vile starts to enjoy much more the pleasure of haunting and destroying his target, almost to the point of being an obsession, making him ignore any collateral damage he could cause with his actions and aggravating his position inside the Haunter organization up to the point of being considered to be a borderline maverick. This leads the high command  to preemptive arrest him, in waiting for a sentence on his destiny.
 
@@ -53,13 +54,13 @@ It is unknown what Vile does during most parts of the X game, as he only appears
 Vile's final appearance is inside Sigma Fortress, where he attempts again to destroy X, this time capturing Zero first. He almost succeeds in doing it, but he underestimates Zero and X's potential as the first breaks free and destroys his armor, by sacrificing himself, and the latter takes him down. The same fate awaits Vile in his own game mode, but with the addition of a final dialogue between a dying Vile and Sigma. Here Vile's true intentions are finally revealed: he's sole purpose in life has always been defeating X and nothing more, as everything he claimed were only justifications for his actions. In fact, Vile has never had any idea of what to do had he managed to beat X:
 \begin{quote}
 	SIGMA: What exactly did you plan to do, Vile? Would you stand before me as a Maverick Hunter? Kneel before me and place yourself at my mercy?
-	
-	VILE: ...What did I.. plan to do? Heh... thinking about it now, I'm not actually sure
-	
+	VILE: $\dots$What did I$\dots$ plan to do? Heh$\dots$ thinking about it now, I'm not actually sure
 	[$\dots$]
-	
-	VILE: I don't care what happens to this world... By defeating X\footnote{In Vile's game mode he manages to take down both Zero and X, only to be destroyed because of a surprise attack from Zero, immobilize him and gives X the time to hit him. Hence the reason why Vile claims to have defeaten X}, I've validated
-	my own existence... and that's all that matters to me now.
+	VILE: I don't care what happens to this world$\dots$ By defeating X\footnote{In Vile's game mode he manages to take down both Zero and X, only to be destroyed because of a surprise attack from Zero, immobilize him and gives X the time to hit him. Hence the reason why Vile claims to have defeated X}, I've validated
+	my own existence$\dots$ and that's all that matters to me now.
 \end{quote}
 
-\section{Mega Man X3: Vile mk.II}
+\section{Mega Man X3: Vile mk-2}
+Vile's story did not end in Sigma's fortress, as his remains are, in fact, recovered by unspecified figures (possibly the same people who recovered also Zero's body parts), probably to repair him later in time. It will take more than six months for Vile to come back to life, only after what remained of him ended up in the hands of a corrupted Dr.~Doppler, who proceeds to rebuild and upgrade him into his new form, Vile mk-2. In the process, it is also possible that Vile gets infected with the sigma virus, making him even more unstable than before. This new version of Vile, in fact, is moved only by hatred and vengeance for X and Zero, the causes of his first demise, even to the point of ignoring the orders from his new master Doppler, who required to capture X alive. Vile, instead, act as he wishes, preferring to lure X into a mined factory and face him instead of actively chasing X as the nightmare police does. Ironically, some sources seem to imply Vile's deep hate for X is much closer to human behavior than X's way to be~\cite{Xcoll1:Manual_X3,wayback:X3_resources}, in a sense making Vile better than X. However, Vile is blinded by the hatred and isn't capable to acknowledge such fact. Despite everything, however, as pointed out in~\cite{wayback:X3_resources}, Vile  doesn't seem to have gone completely mad, has he still shows some glimpse of sanity, for example by preferring to lure X into a trap he prepared (the mined factory) instead of charging forward. Moreover, even after being defeated by X the first time, Vile opts to retreat and reorganize, by building his own personal Ride Armor to use against X. In this settings, Vile also proves again his skills in Ride Armors technology, by building yet another custom armor (the fourth one), the ``Goliath'', specifically made for combat and that Vile's refers to as the world's most advanced Ride Armor~\cite{book:MH_field_guide}.  After having completed his plan, Vile begins to wait for X inside Doppler's laboratory, knowing perfectly X will come to stop Doppler. In the wait, however, Vile decides to let loose to his destructive impulses, wrecking havoc inside the laboratory's section he was supposed to protect. 
+
+In the end, Vile and X meet again and have a final clash. Vile employs all his arsenal, Ride Armor included, but is ultimately defeated again by X. Before dying, Vile manages only to unleash a final warning, telling X that no matter how, he will always hunt him until X has finally died\footnote{``\textit{Don’t think that this is the end, X! I will haunt you to the day you die$\dots$.}''-Vile mk-2~\cite{wordpress:X3_japanese_script}}.
