--- a/src/character_others.tex
+++ b/src/character_others.tex
@@ -11,11 +11,15 @@ About them, but that still play an important role in the Mega Man X saga.
 	\caption{Dr.~Cain as he appears in \emph{Day of $\Sigma$}.}
 \end{figure}
 
-Dr.~Cain is the brilliant scientist father of reploid's technology. Originally an archaeologist, Dr. Cain accidentally find Dr.~Light's laboratory while searching from prehistoric plant fossils, with X's capsules and blueprints inside~\cite{wiki:Cain_journal}-\cite{elysium_Cain_journal}, whom he befriends with. By using X's help, Dr.~Light's schematics and his knowledge of robotics, Dr. Cain manages to create his own version of a robots with free-will, which he label ``Reploids''. These new type robots greatly impacted on society, almost at the point of becoming necessary, in a very short amount of time and making Dr.~Cain one of the most important person of his world. However although Dr.~Cain's intention were surely good, aiming to achieve the same dream Dr.~Light had to create a society where humans and robots can life together, his actions were also the cause of firsts Maverick attacks~\cite{book:MH_field_guide}. In creating reploids, in fact, Cain didn't manage to fully recreate X's components, especially his ``Distress Circuit''~\cite{book:RMZ_Complete_works} and had to develop substitutes which where however prone to errors. Moreover these reploids' moral integrity wasn't tested for a period of time as long as X's one, making them more susceptible to taking a wrong path and going Maverick. Dr.~Cain seems partially to acknowledge his error, as after first mavericks appear he tries to find the cause of these problems\footnote{``\textit{This is the third instance of this type of behavior and I still have no idea of what is causing it!}'' - Journal of Dr.~Cain, $16^{th}$ July} develop more advanced reploids with more robust circuits to prevent errors, Sigma being the last of this series\footnote{``\textit{Sigma is one of the most intelligent reploids I've created and contains my latest circuit designs. His systems should be immune to any problems}'' - Journal of Dr.~Cain, $20^{th}$ November}. However even his latest designed circuits didn't manage to keep Sigma safe from going Maverick. Once Sigma begins his assault, Cain remains powerless to watch the destruction his creation caused believing nothing could stop him, not even X or Zero. However he doesn't either stop them from trying, as  he firmly believes something had to be done\footnote{``\textit{ I'm doubtful of their chances ( X and Zero), but I won't stop him. Something has to be done}'', Journal of Dr.~Cain, $4^{th}$ July}.
+Dr.~Cain is the brilliant scientist father of reploid's technology. Originally an archaeologist, Dr. Cain accidentally finds Dr.~Light's laboratory while searching from prehistoric plant fossils, with X's capsules and blueprints inside~\cite{wiki:Cain_journal}-\cite{elysium_Cain_journal}. Cain befriends X and with his help, Dr.~Light's schematics and his knowledge of robotics, Dr.~Cain manages to create his own version of a robots with free-will, which he label ``Reploids''. These new type robots greatly impacted on society, almost at the point of becoming necessary, in a very short amount of time and making Dr.~Cain one of the most important person of his world. However although Dr.~Cain's intention were surely good, aiming to achieve the same dream Dr.~Light had to create a society where humans and robots can life together, his actions were also the cause of firsts Maverick attacks~\cite{book:MH_field_guide}. In creating reploids, in fact, Cain didn't manage to fully recreate X's components, especially his ``Distress Circuit''~\cite{book:RMZ_Complete_works} and had to develop a substitute which was however prone to errors. Moreover these reploids' moral integrity wasn't tested for a period of time as long as X's one, making them more susceptible to taking a wrong path and going Maverick. Dr.~Cain seems partially to acknowledge his error, as after first mavericks appear he tries to find the cause of these problems\footnote{``\textit{This is the third instance of this type of behavior and I still have no idea of what is causing it!}'' - Journal of Dr.~Cain, $16^{th}$ July} develop more advanced reploids with more robust circuits to prevent errors, Sigma being the last of this series\footnote{``\textit{Sigma is one of the most intelligent reploids I've created and contains my latest circuit designs. His systems should be immune to any problems}'' - Journal of Dr.~Cain, $20^{th}$ November}. However even his latest designed circuits didn't manage to keep Sigma safe from going Maverick. Once Sigma begins his assault, Cain remains powerless to watch the destruction his creation caused believing nothing could stop him, not even X or Zero. However he doesn't either stop them from trying, as  he firmly believes something had to be done\footnote{``\textit{ I'm doubtful of their chances ( X and Zero), but I won't stop him. Something has to be done}'', Journal of Dr.~Cain, $4^{th}$ July}.
 
 A different fate is instead reserved to Dr.~Cain's in the series remake, Maverick Hunter X. Here Cain's role remains the same up until Sigma's revolution, with the only difference of being much older and weaker, as he's connected to a life-support machine to extend his life for as much as he can. His only appearance is in the \emph{Day of $\Sigma$} OVA, where he explains to a pre-revolution Sigma the power X possesses and how it manifests in his hesitations and empathy, thus making Sigma interested in him. Cain is then seen only at the end of the OVA, after Sigma declares his war by launching missiles onto Abel city. He is last seen in his house, right before a missiles strikes directly onto it presumably killing him, pondering if reploids, created by humans but with abilities far beyond theirs, were fruit of mankind's arrogance rather than their good intentions and wish for knowledge\footnote{``\textit{Reploids... created by humanity, yet possessing abilities far beyond our own$\dots$ [$\dots$] Mankind's arrogance?$\dots$No}''-Dr.~Cain, Day of $\Sigma$, scene 4}.
 
-%FROM HERE X2
+Following the events fo the first game, Dr.~Cain decides to take active action in the war against mavericks, by working within the hunters organization by offers his support in coordinating operations and providing technology. During the events of the second game Cain helps X to face the X-hunters, and potentially repairing Zero's body after all his parts have been retrieved. In fact, despite Cain's incredible knowledge of reploids, he was not able to completely restore Zero's body, even after having retrieved his control chip intact, as Zero's body was as complex as X's one. It is only thanks to Serges that Zero's parts are completely restored, allowing Cain to perform the last step of putting everything together and revive Zero. Finally, Cain also manages to follow traces left behind by the X-Hunters, thus pinpointing their fortress and indicating X where to strike. 
+
+During the events of the ``Doppler Incident'' Dr.~Cain plays almost the exact same role, by working with the hunter to coordinate the operations within Doppler Town. In such occasion, Cain studies the memory chips of defeated maverick to discover Doppler's hideout. Moreover, he also warns X and Zero that the evil scientists had collected the special abilities of the maverick X had defeated to develop an ``ultimate battle body''. Originally Cain speculates that such body could be for Doppler himself, as he does not possess any fighting capabilities, but he later change his mind when data refers that such body is not compatible with Doppler, thus concluding that the scientist must have build such battle body for someone else, i.e. a revived Sigma~\cite{wordpress:X3_japanese_script}.
+
+%Following the events of Doppler Town, Dr.~Cain disappears completely from the series, not appearing or being cited anymore in any game. This leads to the conclusion Cain had retired from the hunters organization, and possibly died of old age.
 
 \section{Serges} \label{char:Serges}
 \begin{figure}[h]
