--- a/src/timeline.tex
+++ b/src/timeline.tex
@@ -45,10 +45,11 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabline& $\cdot$ Armored Armadillo is appointed commander of the 8th armored force.\\
 	\tabline& $\cdot$ Flame Mammoth becomes captain of the 4th Land Unit stationed in the Middle East.\\
 	\tabline& $\cdot$ Storm Eagle becomes leader of the 7th Airborne Unit. Overdrive Ostrich joins the same unit.\\
-	\tabline& $\cdot$ Boomer Kuwanger, Flame Stag and Spark Mandrill join the 17th Elite Unit.\\
+	\tabline& $\cdot$ Boomer Kuwanger, Gravity Beetle, Flame Stag and Spark Mandrill join the 17th Elite Unit.\\
 	\tabline& $\cdot$ Sting Chameleon is assigned to the 9th Special Force (Ranger Unit).\\
 	\tabline& $\cdot$ Magna Centipede joins the 0th Special Unit ``Shinobi''.\\
 	\tabline& $\cdot$ Vile joins the 17th Elite Unit\footnote{Here the fact that all mavericks joins the organization from the beginning is only author's flavor as no information about these events are given}.\\
+	\timepoint{Scientists build Crush Crawfish as a combat reploid. However a bug in his AI makes him incredibly violent. Hence, he is sealed away in a warehouse for later repair.}
 	\midrule
 	\tabdot& 10$^{th}$ December 21XX: Maverick Hunters have been operating for about two years. X is still seeking his place in life.\\
 	\tabdot& Overdrive Ostrich has an accident, which deprives him of his flight ability. Ostrich retires from the Hunters.\\
