--- a/src/x3.tex
+++ b/src/x3.tex
@@ -24,7 +24,7 @@ After an unspecified amount of time from the previous game's events, Sigma's reb
 	\caption{X and Zero dispatching against Doppler}
 \end{figure}
 
-Such situation, however, last only for a few months. After this amount of time, in fact, reploids whose maverick behavior was supposed to be suppressed suddenly begins to riot, revealing that the ``vaccine'' developed by Doppler was merely a placebo. Because of this, the scientist is appointed as responsible for the riot and Maverick Hunters are ordered to arrest him. X and Zero are then dispatched to infiltrate Doppler Town and capture him but, few hours after their intrusion, Doppler's forces begin attacking the Maverick Hunters HQ, forcing the two to quickly return and defend their base. During such operation former Hunter and now Doppler's follower Mac betrays and captures X, only to be later destroyed by Zero coming to rescue his friend. Together the two friends manages to save the HQ from the attack, and then resume their mission of capturing Doppler. The two proceed to fight against the eight mavericks, as well as the two other forces Doppler send to halt the couple: the Nightmare Police, constituted by Doppler's creation Bit and Byte, and a revived and vengeful Vile, now upgraded to Vile Mk.II. However neither them nor the mavericks manage to halt X and Zero which, with the help of Dr.~Cain, locate Doppler's laboratory and proceed to raid it.
+Such situation, however, last only for a few months. After this amount of time, in fact, reploids whose maverick behavior was supposed to be suppressed suddenly begins to riot, revealing that the ``vaccine'' developed by Doppler was merely a placebo. Because of this, the scientist is appointed as responsible for the riot and Maverick Hunters are ordered to arrest him. X and Zero are then dispatched to infiltrate Doppler Town and capture him but, few hours after their intrusion, Doppler's forces begin attacking the Maverick Hunters HQ, forcing the two to quickly return and defend their base. During such operation former Hunter and now Doppler's follower Mac betrays and captures X, only to be later destroyed by Zero coming to rescue his friend. Together the two friends manages to save the HQ from the attack, and then resume their mission of capturing Doppler. The two proceed to fight against the eight mavericks, as well as the two other forces Doppler send to halt the couple: the Nightmare Police, constituted by Doppler's creation Bit and Byte, and a revived and vengeful Vile, now upgraded to Vile mk-2. However neither them nor the mavericks manage to halt X and Zero which, with the help of Dr.~Cain, locate Doppler's laboratory and proceed to raid it.
 \begin{figure}[htp]
 	\centering
 	\includegraphics[height=4cm]{figures/X3/Story_2.jpg}
@@ -379,7 +379,7 @@ The last upgrade X can obtain is the beam saber. This upgrade can be obtained in
 
 The path which leads to obtain the Beam Saber is rather straightforward, and obtainable with the following steps:
 \begin{enumerate}
-	\item Find and defeat Vile mk.II using one of his weakness, killing him in the process.
+	\item Find and defeat Vile mk-2 using one of his weakness, killing him in the process.
 	\item By killing Vile, the Doppler Stage B will change accordingly. In the new path X will find the sub-boss  \hyperlink{miniboss:Mosquittus}{Mosquittus}. This is the only sub-boss Zero can fight and, upon defeating it, the boss will self-destruct after trapping him. This will cause Zero to be seriously damaged (preventing him to be called again) but in exchange he will give X his Beam Saber.
 \end{enumerate} 
 The Beam Saber gives X another level in his charge shot, which turns green. Upon releasing the fire button, X will swing the beam saber dealing massive damage to every enemy he hits with it. If X is equipped with the Arm Part, the saber will also produce a shockwave which travels forward, and upon making contact with an enemy will not only deal heavy damages to the target, but also produce three more slashes which will deal even more damage over time. In particular, hitting any enemy with the saber itself will deal 30 damage per frame to all enemies whereas a fully charged saber will deal a total of 98 damages. When fighting bosses, the regular saber will deal 16 damages (half health bar), while the shockwave will deal 8 damages, followed by three slashes which deals 4 damages each, dealing in total 20 damages.
@@ -1732,7 +1732,7 @@ The main challenge in fighting the Press Disposer arises from managing the vario
 
 \section{Doppler Stage B}
 
-The second stage of Doppler's laboratory takes place on a higher floor, with mountains visible outside. The appearance and difficulty of the level depend on the outcome of X's clash with Vile mk.II. If X managed to defeat the secret boss using his main weakness, the stage remains intact when X visits it. However, if he didn't use the correct weapon or avoided the confrontation, Vile will still be alive, and X will find the stage ravaged, with different enemies and without a sub-boss, implying that Vile went on a rampage across the stage before X's arrival~\cite{wiki:Doppler_stage}.
+The second stage of Doppler's laboratory takes place on a higher floor, with mountains visible outside. The appearance and difficulty of the level depend on the outcome of X's clash with Vile mk-2. If X managed to defeat the secret boss using his main weakness, the stage remains intact when X visits it. However, if he didn't use the correct weapon or avoided the confrontation, Vile will still be alive, and X will find the stage ravaged, with different enemies and without a sub-boss, implying that Vile went on a rampage across the stage before X's arrival~\cite{wiki:Doppler_stage}.
 
 \begin{figure}[htp]
 	\centering
@@ -1762,15 +1762,15 @@ Following enemies populates this stage~\cite{wiki:Doppler_stage}:
 	 \item \hyperlink{enem:Wall_Cancer}{Wall Cancer} (if Vile alive)
 \end{itemize}
 
-\subsection{Vile mk.II}\label{boss:Vile2} 
+\subsection{Vile mk-2}\label{boss:Vile2} 
 \begin{figure}[htp]
 	\centering
 	\includegraphics[height=\portraitsize]{figures/X3/Doppler_stages/vile2.png}
 	\includegraphics[height=\portraitsize]{figures/X3/Doppler_stages/vile2_dive.png}
-	\caption{Vile mk.II's official artwork from~\cite{book:MMX_Complete_art} and the XDive game}
+	\caption{Vile mk-2's official artwork from~\cite{book:MMX_Complete_art} and the XDive game}
 \end{figure}
 
-Vile, once an SA-ranked Maverick Hunter, took part in Sigma's rebellion during the events of the first game (see \ref{boss:Vile}), but was ultimately destroyed by X. However, Vile's story did not end there, as he was resurrected some time later by the brilliant scientist Dr. Doppler, who was under the control of the Sigma Virus. According to~\cite{X3:Manual}, Vile's revival was the first step Doppler took when putting his plan into motion. However, the plan did not work as intended, as Vile, now reborn as Vile mk.II, refused to collaborate with Doppler, preferring instead to seek revenge on X and Zero, the ones responsible for his demise. Blinded by his hatred (and possibly infected by the virus too~\cite{X3:Manual}), Vile used the Doppler Town incident to get his revenge on X, first by luring and facing him in a mined factory and eventually at Doppler's laboratory. However, even using the powerful \hyperlink{vehicle:Ride_Armor_Goliath}{Goliath} (Brown Bear) Ride Armor he built, Vile ultimately met his fate again at the hands of X. Ironically, various sources suggest that Vile mk.II's  hate made him even more human than X himself, but his grudge and the mayhem he descended into didn't allow him to notice it~\cite{Xcoll1:Manual_X3,wayback:X3_resources}.
+Vile, once an SA-ranked Maverick Hunter, took part in Sigma's rebellion during the events of the first game (see \ref{boss:Vile}), but was ultimately destroyed by X. However, Vile's story did not end there, as he was resurrected some time later by the brilliant scientist Dr. Doppler, who was under the control of the Sigma Virus. According to~\cite{X3:Manual}, Vile's revival was the first step Doppler took when putting his plan into motion. However, the plan did not work as intended, as Vile, now reborn as Vile mk-2, refused to collaborate with Doppler, preferring instead to seek revenge on X and Zero, the ones responsible for his demise. Blinded by his hatred (and possibly infected by the virus too~\cite{X3:Manual}), Vile used the Doppler Town incident to get his revenge on X, first by luring and facing him in a mined factory and eventually at Doppler's laboratory. However, even using the powerful \hyperlink{vehicle:Ride_Armor_Goliath}{Goliath} (Brown Bear) Ride Armor he built, Vile ultimately met his fate again at the hands of X. Ironically, various sources suggest that Vile mk-2's  hate made him even more human than X himself, but his grudge and the mayhem he descended into didn't allow him to notice it~\cite{Xcoll1:Manual_X3,wayback:X3_resources}.
 
 \begin{figure}[htp]
 	\centering
@@ -1825,7 +1825,7 @@ Different is the situation when facing the Goliath. This custom-made armor can b
 
 Facing the Goliath requires much more diligence, especially considering the high damages the armor deals and the fact that, as soon as it's gone, the player must face Vile himself. Applying a similar strategy to the one used against the DRA-00 is the best option, although players must be careful, especially since the bigger arena means Vile will often attack from off-screen, either with a punch or by shooting. More importantly, players must avoid getting trapped by the harpoons, as the window to escape is small and it is very likely to get hit by the Goliath's dash.
 
-Even if players manage to defeat Vile's armor, whatever it is, victory is still far, as now they will have to face Vile mk.II himself. In total, Vile can perform four attacks, but he will only employ two when faced in his factory. The two attacks shared by the encounters are his \emph{Flame Round} and \emph{Machine Gun}. With the Flame Round, Vile will leap above X, dropping a knee-bomb mid-air that erupts in a pillar of flame that chases him, even climbing onto walls. Luckily, X's jump is just enough high to avoid it, and combining a jump with an air-dash can guarantee to dodge the attack. When performing the Machine Gun move, Vile will hover in the air and shoot a volley of five bullets aimed at X. Moreover, if Vile is faced in Doppler Stage B, he will perform two other attacks: the \emph{Spread Shot} and his own \emph{Dash Attack}. With the former, Vile will shoot a sphere from his cannon that splits into five bolts. While these bolts do not harm X, they trap him by blocking his movement. Often, after this first attack, Vile will employ his Dash Attack, where he tries to grab X by the neck and rise him off the floor.
+Even if players manage to defeat Vile's armor, whatever it is, victory is still far, as now they will have to face Vile mk-2 himself. In total, Vile can perform four attacks, but he will only employ two when faced in his factory. The two attacks shared by the encounters are his \emph{Flame Round} and \emph{Machine Gun}. With the Flame Round, Vile will leap above X, dropping a knee-bomb mid-air that erupts in a pillar of flame that chases him, even climbing onto walls. Luckily, X's jump is just enough high to avoid it, and combining a jump with an air-dash can guarantee to dodge the attack. When performing the Machine Gun move, Vile will hover in the air and shoot a volley of five bullets aimed at X. Moreover, if Vile is faced in Doppler Stage B, he will perform two other attacks: the \emph{Spread Shot} and his own \emph{Dash Attack}. With the former, Vile will shoot a sphere from his cannon that splits into five bolts. While these bolts do not harm X, they trap him by blocking his movement. Often, after this first attack, Vile will employ his Dash Attack, where he tries to grab X by the neck and rise him off the floor.
 \begin{figure}[htp]
 	\ContinuedFloat
 	\centering
@@ -1839,9 +1839,9 @@ Even if players manage to defeat Vile's armor, whatever it is, victory is still 
 \end{figure}
 
 
-There is no best strategy against Vile mk.II. During his first encounter, he will employ only ranged attacks, but the arena is small, and players are likely not to have maxed out X's hp, meaning that even small damages can make the difference. On the other hand, during the final confrontation, players are likely to have maxed X's power, but the new attacks Vile can perform and the damage they deal balance the fight. Clearly, a decisive factor for the fight is the health players have when they reach it, meaning sustaining heavy damage against the Ride Armor is far from ideal. Vile's weakness are the Ray Splasher and the Spinning Blade, which provide increased damage, a weakness shared also by his first armor, the DRA-00. Meanwhile, the Goliath has a completely different set of weaknesses, being susceptible to damages coming from the Tornado Fang and the Parasitic Bomb.
+There is no best strategy against Vile mk-2. During his first encounter, he will employ only ranged attacks, but the arena is small, and players are likely not to have maxed out X's hp, meaning that even small damages can make the difference. On the other hand, during the final confrontation, players are likely to have maxed X's power, but the new attacks Vile can perform and the damage they deal balance the fight. Clearly, a decisive factor for the fight is the health players have when they reach it, meaning sustaining heavy damage against the Ride Armor is far from ideal. Vile's weakness are the Ray Splasher and the Spinning Blade, which provide increased damage, a weakness shared also by his first armor, the DRA-00. Meanwhile, the Goliath has a completely different set of weaknesses, being susceptible to damages coming from the Tornado Fang and the Parasitic Bomb.
 
-According to game data, Vile mk.II reaches a power level of 9200 and a speed level of 7200 rp.
+According to game data, Vile mk-2 reaches a power level of 9200 and a speed level of 7200 rp.
 
 
 \begin{table}[htp] 
@@ -1888,7 +1888,7 @@ According to game data, Vile mk.II reaches a power level of 9200 and a speed lev
 \end{figure}
 If Vile was defeated during his first clash, Volt Kurageil will act as the boss for Doppler Stage B. This giant octopus-shaped mechaniloid was designed to be the ultimate underwater fighter and was later employed by Doppler as a line of defense inside his laboratory~\cite{wayback:X2_resources}.
 
-Unlike Vile mk.II, Volt Kurageil is a much more manageable fight. This boss can't move and is positioned in the upper-center portion of the arena, occupying a major part of it due to its size. From this position, Volt Kurageil can perform only three attacks~\cite{book:Compendium}: the \emph{Homing Shots}, two sets of three homing missiles each fired from the boss's base that home in on X's position; the \emph{Claw Attack}, where Volt Kurageil throws one of its claws at X; and the \emph{Light Shot}, three light bullets fired at X but only if he is climbing a wall.
+Unlike Vile mk-2, Volt Kurageil is a much more manageable fight. This boss can't move and is positioned in the upper-center portion of the arena, occupying a major part of it due to its size. From this position, Volt Kurageil can perform only three attacks~\cite{book:Compendium}: the \emph{Homing Shots}, two sets of three homing missiles each fired from the boss's base that home in on X's position; the \emph{Claw Attack}, where Volt Kurageil throws one of its claws at X; and the \emph{Light Shot}, three light bullets fired at X but only if he is climbing a wall.
 \begin{figure}[htp]
 	\centering
 	\begin{subfigure}{.25\linewidth}
@@ -1998,7 +1998,7 @@ In battle, Doppler himself is not a highly resilient boss, but the main gimmick 
 	\end{tabular}
 	\caption{Dr.~Doppler's attacks damage~\cite{wiki:Doppler,book:Compendium}}
 \end{table}
-According to available information, Doppler stands to a power and speed level of 17400 and 18000 rp respectively, higher than all the main bosses and also Vile mk.II.
+According to available information, Doppler stands to a power and speed level of 17400 and 18000 rp respectively, higher than all the main bosses and also Vile mk-2.
 
 
 \section{Doppler Stage D}
