--- a/MMX_Compendium.tex
+++ b/MMX_Compendium.tex
@@ -92,7 +92,7 @@
 	
 \part{Mega Man X3}
 \label{cha:X3}
-%\input{src/x3.tex}
+\input{src/x3.tex}
 \part{Characters}
 	\chapter*{Preface}
 	In this part more detailed information about characters who appear in the Mega Man X series are given. Here, however, information will not only come from in-game material but also from external (but still official) sources which expand and complete what is said within the games. Another difference between this part of the document and the previous ones is the fact that while in precedent chapters only facts were reported, leaving out any possible interpretation, here the objective is to try to put together all available data, even giving a plausible solution in case of conflicting elements. In any case it will be clarified whenever a solution is proposed, to let readers know what parts come from official sources and what instead are supposed solely for this document.
@@ -124,17 +124,17 @@
 %\input{src/character_X}
 %\input{src/character_Zero}	
 \input{src/character_Sigma_and_Vile}
-%\input{src/character_others}
+\input{src/character_others}
 
 \appendix
 \chapter {Vehicles}
-%\input{src/vehicles}
+\input{src/vehicles}
 \chapter{Enemies}
-%\input{src/enemies}
+\input{src/enemies}
 
 
 \chapter{Timeline}
-%\input{src/timeline}
+\input{src/timeline}
 
 \chapter{Damage Tables}
 %\input{src/tables}
